# FireRescue

./: Board.cpp  Board.h  CMakeLists.txt  FireRescue.cpp  FireRescue.h  MapCell.cpp  MapCell.h  dice.cpp  dice.h  ffDialog.cpp  ffDialog.h  fr.ui  main.cpp  ui_fr.h
